--- a/_posts/2018-01-16-CS-50.md
+++ b/_posts/2018-01-16-CS-50.md
@@ -5,3 +5,7 @@ date: 2018-01-16
 ---
 
 I'm going to keep moving through Gordon Zhu's practical Javascript videos and try to finish the CS50 project so I'm back on track. Zhu's videos seem important since they teach beginners how to immediately start building stuff with JS instead of just becoming adept at the algorithms, which is really all I've done so far. Between that, CS50, and the front end FCC projects that should keep me occupied for the rest of the month.
+
+Finished CS50 Week 1! Encountered an annoying bug when running the tests for the credit problem, which I found a thread for on Reddit and posted the response <a href="https://www.reddit.com/r/cs50/comments/7cio3n/check50_on_creditc_says_it_cant_find_invalidn/">here</a>
+
+Also, interestingly. It looks like when I made a file for the 15th and pushed that to the blog, Github read that as me making a contribution for the 15th. Not sure if that's a mistake or some kind of bug, but when I checked this morning there was definitely a white square on my progress chart for both the 15th and the 16th, and when I updated this morning it marked one contribution for the 15th and one contribution for the 16th. Weird.
