--- a/_posts/2018-01-26-hangover.md
+++ b/_posts/2018-01-26-hangover.md
@@ -8,3 +8,6 @@ I am hungover. Wow that is lot of curse words what is wrong with me. It's 5:30 a
 
 I don' even remember what I was about to type. Alright. Going to do my katas.
 
+
+
+Just spent 30 minutes trying to go back to a previous commit and make that the new head using git reset hard. Makes no fucking sense. No one explains git properly anywhere. I hate stack overflow. I hate you so much. I love you. But I hate you. line breaks were not working with the br tag. <br> and i guess now they are?
