--- a/_posts/2018-01-26-hangover.md
+++ b/_posts/2018-01-26-hangover.md
@@ -11,3 +11,14 @@ I don' even remember what I was about to type. Alright. Going to do my katas.
 
 
 Just spent 30 minutes trying to go back to a previous commit and make that the new head using git reset hard. Makes no fucking sense. No one explains git properly anywhere. I hate stack overflow. I hate you so much. I love you. But I hate you. line breaks were not working with the br tag. <br> and i guess now they are?
+
+
+Not sure why the line breaks were not working they seem to be fine. More importantly the drab reality that is sobriety is now kicking in but with it leaves the nightmare that is hangover nausea. So I have five days until the end of the month. 
+
+I absolutely need to: <br>
+
+-Finish Practical JS
+-Finish Music on CS50 (forget about the password cracker it's not mandatory and clearly some extra credit BS) and get to the end of Week 4 to stay on schej
+-At least finish a few of the FCC front end development projects
+-Keep doing strictly only 2 katas on codewars
+-Start Wes Bos' thing on the 28th.
