--- a/_posts/2018-01-27-gameplan.md
+++ b/_posts/2018-01-27-gameplan.md
@@ -12,4 +12,10 @@ Do the free prep on hack reactor.
 
 Do Wes Bos startingon the 28th.
 
-Just free prep all day tomorrow that's it ttat's where you live.
+Just free prep all day tomorrow that's it that's where you live.
+
+
+Afternoon Update:
+
+Completed half of Git Immersion which was very useful
+Now working through the 150 hack reactor exercises, almost done with the first 10.
