--- a/_posts/2018-01-06-katas-day.md
+++ b/_posts/2018-01-06-katas-day.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "katas settings"
+title: "Changed Settings"
 date: 2018-01-06
 ---
 
-Katas were getting way too difficult. 6 is already super hard. 5 was just getting absurd. I didn't realize that when you're on the home page it says you're goal is to "rank up" which obviously keeps giving you harder challenges. Changed it to fundamentals and now practicing. I think if I can complete 7s comfortably I'll start moving back up to the 6s. 
+Katas were getting way too difficult. 6 is already super hard. 5 was just getting absurd. I didn't realize that when you're on the home page it says you're goal is to "rank up" which obviously keeps giving you harder challenges. Changed it to fundamentals and now practicing. I think if I can complete 7s comfortably I'll start moving back up to the 6s.
 
 Also completing one FCC intermediate challenge per day. And of course CS50 week 1. That should keep me busy the rest of the day.
