--- a/_posts/2018-01-07-slow-day.md
+++ b/_posts/2018-01-07-slow-day.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "katas CS50"
+title: "CS50 Week 0"
 date: 2018-01-07
 ---
 
 One kata per day.
-And CS50 week 0. 
+And CS50 week 0.
 Going to build a simple game but take the time to do it properly and put the right amount of effort in. I really only started 3 days ago so I'll turn this in by Tuesday night. Am copying the source code from the Oscar and Pikachu games to get the items to drop but they won't seem to fall the way I want them to. Will try copying it verbatim first to get it working and then I'll make the necessary changes.
