--- a/_posts/2018-02-08-still-mod-2.md
+++ b/_posts/2018-02-08-still-mod-2.md
@@ -12,3 +12,5 @@ thisFunction(thisOtherFunction) {
 Also interesting that the functional programming style creates basically this totally empty shell through which you pass all this data. But all the variables really don't represent anything on their own. Their just placeholders for different modifications of the data that you eventually pass through this flow. It's a totally different style of coding than anything you learn on FCC or CodeAcademy. And it seems like a very important part of learning how to code more efficiently.
 
 Going to finish up refactoring fashion inventory and then doing a wes bos and doing two katas if I don't collapse.
+
+I've just come to the sad realization that I haven't managed to push these stupid posts consistently every week except for the first two weeks of January. I think I really need to start doing it as soon as I get up in the AM to avoid forgetting!
