--- a/_posts/2018-02-15-CSP.md
+++ b/_posts/2018-02-15-CSP.md
@@ -4,6 +4,4 @@ title: "Moar CSX"
 date: 2018-02-15
 ---
 
-Some of the CSX challenges are proving a little bit more difficult than I initially thought. It also feels like I'm using CSX as a way of procrastinating. I should really finish up HR prep and just apply to them as well, even if CSX now seems more promising beggars can't be choosers, and I haven't been accepted anywhere yet so... first things first.
-
-Had done the object count a few times but it took me a second on challenge 12 to realize that I could set the count[key] equal to (count[key] || empty array).concat(element) to push all the matched elements into an array that passes the callback for that one key. Anyway it's not so important just needed to write it down somewhere so it sticks, hopefully. I have two days of Wes Bos to make up for. And I haven't done my katas for the day. So that's next after I finish this CSX section. Still 6 PM but kind of exhausted from the PSG Madrid match at 4:45 this AM.
+Some of the CSX challenges are proving a little bit more difficult than I initially thought. It also feels like I'm using CSX as a way of procrastinating. I should really finish up HR prep and just apply to them as well, even if CSX now seems more promising beggars can't be choosers, and I haven't been accepted anywhere yet so... first things first. Had done the object count a few times but it took me a second on challenge 12 to realize that I could set the count[key] equal to ""(count[key] || empty array) concat(element)" to push all the matched elements into an array that passes the callback for that one key. Anyway it's not so important just needed to write it down somewhere so it sticks, hopefully. I have two days of Wes Bos to make up for. And I haven't done my katas for the day. So that's next after I finish this CSX section. Still 6 PM but kind of exhausted from the PSG Madrid match at 4:45 this AM.
