--- a/_posts/2018-02-28-breathe.md
+++ b/_posts/2018-02-28-breathe.md
@@ -22,3 +22,6 @@ The plan for next month:
 -node school
 -watch and code premium
 -build chrome extensions and learn react
+
+
+Using python tutor to understand answers. Sometimes some genius dickhead comes up with a 10 character solution on codewars to something that required 50 lines for me. Sometimes the solution is so fucking bonkers that I don't even understand what's going on. In those cases, my advice is to take that bonx++ solution and copy paste it into Python Tutor. Run the solution and see how each line functions. And most of the time you'll quickly understand what's going on
