--- a/_posts/2018-02-09-high-gear.md
+++ b/_posts/2018-02-09-high-gear.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Fashion Inventory"
+title: "High Gear"
 date: 2018-02-09
 ---
 
-Attended my first CodeSmith "JS the Hard Parts" session and pair programmed. It was a good experience and I completed the challenge to start the application. I want to finish HR Prep and before I start doing all the CSX stuff. So I'm going to do that now. 
+Attended my first CodeSmith "JS the Hard Parts" session and pair programmed. It was a good experience and I completed the challenge to start the application. I want to finish HR Prep and before I start doing all the CSX stuff. So I'm going to do that now.
