--- a/_posts/2018-02-17-5-Kyu.md
+++ b/_posts/2018-02-17-5-Kyu.md
@@ -6,4 +6,4 @@ date: 2018-02-17
 
 I'm sleeping like a newborn baby of late which confusing and also throwing off my entire morning. Like 8:30 hours in a single shot. Which is unheard of. At any rate moving through these new katas is going ok today minus the fact that I have 15 minutes before work. Forgot about lastIndexOf... not the most useful but I guess it can come in handy for these kinds of things.
 
-Doing 2 wes bos' later to make up for yesterday. And redoing Mod 1 and Mod 2 from HR prep. Somehow forgot to push again. I don't know what's wrong with me. Just do it every day!!!
+Doing 2 wes bos' later to make up for yesterday. And redoing Mod 1 and Mod 2 from HR prep. Somehow forgot to push again. I don't know what's wrong with me. Just do it every day you useless useless turd.
