--- a/_posts/2018-02-28-breathe.md
+++ b/_posts/2018-02-28-breathe.md
@@ -4,6 +4,9 @@ title: "***** BLOG POST [2] — Second Month Summary *****"
 date: 2018-02-28
 ---
 
+Cannot believe that's another month gone. Did not do nearly as much as I'd hoped, but will try to get the max done by the end of the day.
+
+
 At times it will feel like nothing is getting done, because so many things are happening at the same time. In these moments it's best to regroup, think for a second about the plan, and then just methodically implement that plan going forward. There's nothing else to do.
 
 
