--- a/_posts/2018-02-28-breathe.md
+++ b/_posts/2018-02-28-breathe.md
@@ -4,27 +4,21 @@ title: "***** BLOG POST [2] — Second Month Summary *****"
 date: 2018-02-28
 ---
 
-Cannot believe that's another month gone. Did not do nearly as much as I'd hoped, but will try to get the max done by the end of the day.
+So that's another month gone. Hit some speed bumps here and there but we got there in the end. I'm writing this from the future because it took me an extra three days to finish Wes Bos' 30 in 30 and HR Module 3, but I did!
+
+At times it did feel like nothing was getting done, because so many things were happening at the same time. In these moments it's best to regroup, think for a second about the plan, and then just methodically implement that plan and keep inching forward. As long as the plan is solid there's no point in looking ahead or looking back. There's some old chinese proverb out there about it I'm sure. I know there is one about a pupil asking how long it will take for him to be a master and the master is like a month. And he's like what if I work twice as fast. And the master is like then 2 months! And the pupil is like I don't think you understand what I'm saying. And the master is like no you fucking idiot I'm trying to teach you life lessons, but says it all wise and mysterious like those who keep an eye on the prize only have one eye on their work. Or something or other. Point being. March onwards and just breathe.
 
 
-At times it will feel like nothing is getting done, because so many things are happening at the same time. In these moments it's best to regroup, think for a second about the plan, and then just methodically implement that plan going forward. There's nothing else to do.
+This was the daily routine I wrote when I was feeling flustered towards the end of the month:
 
-
-This month the priorities were to complete Wes Bos, FCC Front End, and HR Prep. As I'm writing this, Wes Bos is on track, HR Prep is on track, but FCC is not, so that's the priority. As I'm writing this on Feb 20th, FCC is way behind.
-
-The routine should be implemented like a piece of code.
-
-Step 1: do 1 new kata, and 3 old katas, first thing in the morning.
+Step 1: do 1 new kata, 3 old katas, first thing in the morning.
 Step 2: if Wes Bos is not on track, do the missing courses
-Step 3: do 1 HR prep interview exercise per day, there are exactly 7
+Step 3: do 1 HR prep interview exercise per day, there are exactly 7 left
 Step 4: do one FCC Front End project, there are 7 left
 Step 5: do some CSX Prep
 
-The plan for next month:
--higher order functions reactive
--node school
--watch and code premium
--build chrome extensions and learn react
+Of those things, I kept doing katas, I finished Wes Bos, and I finished HR prep and am practicing for technical interviews on the 8th and on the 9th.
 
+I'm planning on also finishing CSX by the end of the day. So all that's left is those goddamn FCC front end development projects, and starting on the new plan for next month!
 
-Using python tutor to understand answers. Sometimes some genius dickhead comes up with a 10 character solution on codewars to something that required 50 lines for me. Sometimes the solution is so fucking bonkers that I don't even understand what's going on. In those cases, my advice is to take that bonx++ solution and copy paste it into Python Tutor. Run the solution and see how each line functions. And most of the time you'll quickly understand what's going on
+Also importantly, started using Python Tutor instead of the debugger to figure out what's going wrong with my code. Very useful. Especially when working through algorithm challenges. Sometimes some genius Douche McDouche comes up with a 10 character solution on codewars to something that required 50 lines for me. Sometimes the solution is so bonkers that I don't even understand what's going on. In those cases, my advice is to take that bonx++ solution and copy paste it into Python Tutor. Run the solution and see how each line functions. And most of the time you'll quickly understand what's going on and how the magic is happening.
