--- a/_posts/2018-03-01-again.md
+++ b/_posts/2018-03-01-again.md
@@ -4,4 +4,9 @@ title: "New Plan"
 date: 2018-03-01
 ---
 
-Have exactly a week until Hack Reactor interview and feel pretty unprepared. For the rest of the day will just work on doing Module 3 exercises and alternating with Wes Bos.
+The plan for next month:
+-higher order functions reactive
+-node school
+-watch and code premium
+-build chrome extensions
+-start learning react
