--- a/_posts/2018-03-14-watch.md
+++ b/_posts/2018-03-14-watch.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "watch and code"
+title: "W&C"
 date: 2018-03-14
 ---
 
-Watch and code premium
+Minor progress on watch and code. Still working through the first video.
