--- a/_posts/2018-03-31-31.md
+++ b/_posts/2018-03-31-31.md
@@ -1,7 +1,24 @@
 ---
 layout: post
-title: "Google Page"
+title: "***** BLOG POST [3] — Third Month Summary *****"
 date: 2018-03-31
 ---
 
-Recreating the Google homepage from scratch without using developer tools... the main challenge is figuring out how to get this microphone plug into the textbox, but we're almost there.
+OK. So I've now been coding every day (almost) for nearly 3 months.
+
+I wasn't sure that I wouldn't continue doing this daily update business but when I look back at how far I've come since January 1st it feels pretty significant so maybe it's a good idea.
+
+I started this year wanting to get into Hack Reactor. Along the way, I found out from a friend about Codesmith and started looking into their program. A month ago, I interviewed at both bootcamps and ended up getting into both of them. I ended up choosing Codesmith for a number of reasons, but the strongest were the following:
+
+-people I spoke to seemed friendlier
+-still developing, growing, still small
+-CEO seems like a cool dude
+-projects students build are really impressive
+
+There are a few more reasons than that but these are the main ones.
+
+After I interviewed and got into these programs, I spent two weeks traveling with a friend and in the process got a series of stomach infections and strep and just kind of died. I'm still not feeling so hot and getting a CT scan done on my stomach tomorrow because it hurts to move and it's very unpleasant to have this before I start this program. Thankfully at least got rid of the strep so that's one thing I guess. At any rate, that's my explanation for having a fuckload of zero days and not doing proper updates.
+
+The advice the CEO gave me when I got in was 'don't get complacent' and I'm afraid I did exactly that. In part, it was because I busted my ass trying to get into these programs while working 40 hours a week in a kitchen in Japan which was not exactly relaxing work. So it was a very interesting but also exhausting time, and my body clearly took a toll and that's why I'm on my third course of antibiotics in less than a month and probably have super bacteria developing in my body because nothing is working. 
+
+I'm going to start updating this first thing in the morning again, because it seems like a really good way to set goals for the day, which I stopped doing, and to just generally keep a record of my progress. In the next few days the main priority is to finish all these prework and start doing some of the tutorials on these frameworks. So I have 3 days to do this instagram clone, and then I will rebuild bootstrap and do the bonus angular and react stuff. That's not a lot of time! Hopefully doing the daily git push on this blog will help me get back on track a little bit.
