--- a/_posts/2018-04-01-01.md
+++ b/_posts/2018-04-01-01.md
@@ -4,4 +4,4 @@ title: "****** BLOG POST 2 **********"
 date: 2018-04-01
 ---
 
-Another post, will mostly consist in posting about the process of getting into Codesmith and my experience with the prep work. Also need to cancel watch and code!
+Recreating the Google homepage from scratch without using developer tools... the main challenge is figuring out how to get this microphone plug into the textbox, but we're almost there.
