--- a/_posts/2019-07-26-back.md
+++ b/_posts/2019-07-26-back.md
@@ -15,3 +15,5 @@ Piano lessons in the AM
 Keep writing Pharmacological Investigations
 
 You must throw yourself away to be an artist
+
+may or may not have fucked up this file need ot fix it
