Update for today

--- a/_posts/2019-07-28-better-q.md
+++ b/_posts/2019-07-28-better-q.md
@@ -5,3 +5,17 @@ date: 2019-07-28
 ---
 
 Need to get better quality sleep, maybe reading on the sofa is better so that I sleep right away in bed instead of reading in bed. Taking a break today, maybe do a little bit of writing and set up the studio while shen shen is at her tarot reading.
+
+I was off by a day because I'm an idiot.
+
+Need to get some things done:
+  -Buy flights for portugal
+  -Get in touch with Mamie to figure out dates
+  -Change flight to London
+  -Get accodomodations in Worcester
+
+Bought Live 10 cleaned up the studio, did good work this weekend, need to start working with Push 2. I feel like I'm forgetting something major but maybe not? Also do some Pharmacological Investigations writing, maybe the into post, How Wittgenstein Can Help Us Understand Psychedelics...? Something to that effect.
+
+Maybe the categorical mistakes that we make in thinking that our thoughts are somehow altered.
+
+There has to be some kind of work done in the way in which we categorize the process better than just 'it fucks you up'
