Update for today

--- a/_posts/2019-11-16-Months.md
+++ b/_posts/2019-11-16-Months.md
@@ -1,16 +1,17 @@
 ---
 layout: post
-title: "Years"
-date: 2019-12-01
+title: "Months"
+date: 2019-11-16
 ---
 
-There is no shortage of time to make a difference.
-This week you will reset, you will go to bed every night knowing you've done your absolute maximum.
-You will manage to still go out with someone and still get up at an ungodly hour.
-6:30, every day, no compromises.
+Nearly two months passed since the last update and where are you now. I suppose the value at the end of the day in keeping track of these things is to see how things have developed since routine has broken. Not merely to judge oneself, to tell oneself to do better. Indeed there is no worse form of journal than that which constantly recounts ones failures—each post a reminder of what has gone wrong since the previous post.
 
-Use your reminders list and go through them every day.
+The beauty of simply reporting what is going on is to look back and see if anything has changed.
 
-Schedule your week ahead of time. Schedule it now.
+_Now and then I feel the caress of time as it goes by._ -J. P. Sartre
 
-First, silence.
+In these moments it is important to remind oneself that there is no room for irony, for self-awareness. Any thought happening at the meta-cognitive level must be subsumed under the thought itself. There is no room for higher-order functions, for trying to dissect one's own mental machinery, as if something lies behind or under or above it. As if there is, somehow, something that is not simply just: thought.
+
+And yet this is the very illusion to retract from. The notion that there is some ethereal medium that represents these magical entities called thoughts, floating around in some phlogiston. 
+
+Thought is a variety of things, a collection of self-directed behaviors, involving emotions and feelings, involving discourse, and all the other things that we've given names to. There is, at the end of all this, something to say. 
