Update for today

--- a/_posts/2020-01-01-First.md
+++ b/_posts/2020-01-01-First.md
@@ -8,8 +8,10 @@ date: 2020-01-01
 📖 []  
 🚀 []  
 🌮 []  
-🧘‍♂️ [x] Ha! Got one lol  
+🧘‍♂️ []
   
-💤: 7 hours, + 1  
-🍽: apples, beans, salad, oats  
-💜: better  
+💤: 
+🍽: 
+💜: 
+  
+New template 🙌
